kubernetes/sample-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-deployment
spec:
  selector:
    matchLabels:
      app: sample-app
  replicas: 2
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
        - name: sample-app
          image: blurblah/sample-app
          ports:
            - containerPort: 80
          volumeMounts:
            - name: sample-app-logs
              mountPath: /var/log
      volumes:
        - name: sample-app-logs
          hostPath:
            path: /sample/log
