kubernetes/sample-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
spec:
  selector:
    app: sample-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
  type: NodePort
