kubernetes/sample-app-ingress.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: sample-app.demo
      http:
        paths:
          - path: /
            backend:
              serviceName: sample-app-service
              servicePort: 8000
